config/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
  namespace: aibrix-system
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: aibrix-custom-proxy-config
    namespace: aibrix-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  namespace: aibrix-system
spec:
  gatewayClassName: aibrix-eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
