config/gateway/gateway-plugin.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-plugins
  namespace: aibrix-system
spec:
  selector:
    app: gateway-plugins
  ports:
    - protocol: TCP
      port: 50052
      targetPort: 50052
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-plugins
  namespace: aibrix-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-plugins
  template:
    metadata:
      labels:
        app: gateway-plugins
    spec:
      containers:
        - name: gateway-plugin
          image: gateway-plugins:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50052
      serviceAccountName: aibrix-gateway-plugins
---
# this is a dummy route for incoming request and,
# then request is routed to httproute using model name OR
# request is routed based on the target for that model service
# TODO (varun): check if this dummy route can be removed in future
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reserved-router
  namespace: aibrix-system
spec:
  parentRefs:
    - name: aibrix-eg
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: aibrix-gateway-plugins
          port: 50052
